Working on title nav bar alignment issues. Fixed excessive margin-bottom after last meal item in list.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -38,8 +38,13 @@ h2, h3 {
 
 header { 
   height:70px;
-  border:1px red solid;
+  border: solid red 1px;
 }
+
+header ul { 
+  vertical-align:middle;
+}
+
 footer {
     bottom: 0;
     height: 60px;
@@ -87,11 +92,11 @@ ul, ol {
 }
 
 .navMenu {
+  border: solid blue 1px;
   list-style: none;
   font-size:1.2em;
   vertical-align:middle;
   text-transform:uppercase;
-  padding-top:10px;
   padding-left:0px;
 }
 
@@ -141,7 +146,7 @@ ul, ol {
 }
 
 .mealsScrollList li:last-child {
-  margin-bottom:100px;
+  margin-bottom:50px;
 }
 
 .mealPreviewButton {
